changed color of text for quotes and color of text on endgame for better readability. had js change color back on restart. one of the correct answers returned incorrect because of punctuation, fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 .quote {
     font-size: 2rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: bisque;
+    color: #ffffff;
 }
 
 /* @keyframes quote-top {
@@ -68,6 +68,9 @@ body {
     height: auto;
 }
 
+.restart {
+    color: #ffffff;
+}
 @media screen and (max-width: 960px){
     body {
         background-image: url('../images/leslie.jpg');
